<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAF8F8"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="348dp"
        android:layout_height="379dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/bt_anadirClase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:backgroundTint="#2196F3"
            android:text="@string/anadir_clase" />

        <Button
            android:id="@+id/bt_verHorario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:backgroundTint="#2196F3"
            android:text="@string/ver_horario" />

        <Button
            android:id="@+id/bt_queToca"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#03A9F4"
            android:text="@string/que_toca"
            app:iconTint="@android:color/holo_blue_light" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>